# takehome

./: .gitignore  README.md  STREAMING_IMPLEMENTATION.md
backend/: .env.example  main.py  pyproject.toml
backend/data/: mock_data.py
backend/db/: __init__.py  models.py
backend/routes/: chat.py  conversations.py  tools.py
backend/services/: claude_client.py  conversations.py  tools.py
backend/tests/: __init__.py  test_claude_integration.py  test_conversations.py  test_tools.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/ui/: badge.jsx
